--- a/med_exp.ipynb
+++ b/med_exp.ipynb
@@ -10,11 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "dd32aaa5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 80,
    "id": "fab866de",
    "metadata": {},
    "outputs": [],
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 81,
    "id": "d51a2e90",
    "metadata": {},
    "outputs": [
@@ -45,7 +46,7 @@
        "10324"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,56 +59,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1cae277f",
+   "metadata": {},
+   "source": [
+    "# Exploratory data Analysis\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 82,
    "id": "722d58ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##pragma is sqlite metadata of the df\n",
+    "# df = pd.read_sql('PRAGMA table_info(my_table);', con=database)\n",
+    "# print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "c2384b32",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    cid                          name    type  notnull dflt_value  pk\n",
-      "0     0                            ID  BIGINT        0       None   0\n",
-      "1     1                  Project Code    TEXT        0       None   0\n",
-      "2     2                          PQ #    TEXT        0       None   0\n",
-      "3     3                     PO / SO #    TEXT        0       None   0\n",
-      "4     4                      ASN/DN #    TEXT        0       None   0\n",
-      "5     5                       Country    TEXT        0       None   0\n",
-      "6     6                    Managed By    TEXT        0       None   0\n",
-      "7     7                   Fulfill Via    TEXT        0       None   0\n",
-      "8     8              Vendor INCO Term    TEXT        0       None   0\n",
-      "9     9                 Shipment Mode    TEXT        0       None   0\n",
-      "10   10  PQ First Sent to Client Date    TEXT        0       None   0\n",
-      "11   11        PO Sent to Vendor Date    TEXT        0       None   0\n",
-      "12   12       Scheduled Delivery Date    TEXT        0       None   0\n",
-      "13   13      Delivered to Client Date    TEXT        0       None   0\n",
-      "14   14        Delivery Recorded Date    TEXT        0       None   0\n",
-      "15   15                 Product Group    TEXT        0       None   0\n",
-      "16   16            Sub Classification    TEXT        0       None   0\n",
-      "17   17                        Vendor    TEXT        0       None   0\n",
-      "18   18              Item Description    TEXT        0       None   0\n",
-      "19   19            Molecule/Test Type    TEXT        0       None   0\n",
-      "20   20                         Brand    TEXT        0       None   0\n",
-      "21   21                        Dosage    TEXT        0       None   0\n",
-      "22   22                   Dosage Form    TEXT        0       None   0\n",
-      "23   23    Unit of Measure (Per Pack)  BIGINT        0       None   0\n",
-      "24   24            Line Item Quantity  BIGINT        0       None   0\n",
-      "25   25               Line Item Value   FLOAT        0       None   0\n",
-      "26   26                    Pack Price   FLOAT        0       None   0\n",
-      "27   27                    Unit Price   FLOAT        0       None   0\n",
-      "28   28            Manufacturing Site    TEXT        0       None   0\n",
-      "29   29        First Line Designation    TEXT        0       None   0\n",
-      "30   30            Weight (Kilograms)    TEXT        0       None   0\n",
-      "31   31            Freight Cost (USD)    TEXT        0       None   0\n",
-      "32   32     Line Item Insurance (USD)   FLOAT        0       None   0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['ID',\n",
+       " 'Project Code',\n",
+       " 'PQ #',\n",
+       " 'PO / SO #',\n",
+       " 'ASN/DN #',\n",
+       " 'Country',\n",
+       " 'Managed By',\n",
+       " 'Fulfill Via',\n",
+       " 'Vendor INCO Term',\n",
+       " 'Shipment Mode',\n",
+       " 'PQ First Sent to Client Date',\n",
+       " 'PO Sent to Vendor Date',\n",
+       " 'Scheduled Delivery Date',\n",
+       " 'Delivered to Client Date',\n",
+       " 'Delivery Recorded Date',\n",
+       " 'Product Group',\n",
+       " 'Sub Classification',\n",
+       " 'Vendor',\n",
+       " 'Item Description',\n",
+       " 'Molecule/Test Type',\n",
+       " 'Brand',\n",
+       " 'Dosage',\n",
+       " 'Dosage Form',\n",
+       " 'Unit of Measure (Per Pack)',\n",
+       " 'Line Item Quantity',\n",
+       " 'Line Item Value',\n",
+       " 'Pack Price',\n",
+       " 'Unit Price',\n",
+       " 'Manufacturing Site',\n",
+       " 'First Line Designation',\n",
+       " 'Weight (Kilograms)',\n",
+       " 'Freight Cost (USD)',\n",
+       " 'Line Item Insurance (USD)']"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#pragma is sqlite metadata of the df\n",
-    "df = pd.read_sql('PRAGMA table_info(my_table);', con=database)\n",
-    "print(df)\n"
+    "column_names = df.columns.tolist()\n",
+    "column_names\n"
    ]
   },
   {
@@ -120,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 84,
    "id": "32639b06",
    "metadata": {},
    "outputs": [
